# eldenring-backuptool

./: .gitignore  Cargo.toml  README.md  SAFETY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
scripts/: package-windows.sh
src/: config.rs  discovery.rs  gui.rs  launch.rs  lib.rs  logging.rs  main.rs  monitor.rs  paths.rs  platform.rs  retention.rs  snapshot.rs
