[package]
name = "eldenring-backuptool"
version = "1.0.1"
edition = "2024"
description = "Automatic versioned backups of vanilla Elden Ring saves (Elden Ring Save Guard)"
license = "MIT"

[lib]
name = "save_guard"
path = "src/lib.rs"

[[bin]]
name = "eldenring-backuptool"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
# GUI + dialogs live behind this feature so `cargo test --lib --no-default-features`
# builds the portable core on Linux without pulling eframe/egui/rfd (and X11).
gui = ["dep:eframe", "dep:egui", "dep:rfd"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
# GUI + dialogs: optional, enabled by the `gui` feature (see [features]).
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.35", optional = true }
rfd = { version = "0.17", default-features = false, features = ["common-controls-v6"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
